[project]
name = "niceguitools"
authors = [
    { name = "Julius König", email = "info@bastelquartier.de" },
]
description = "Tools for nicegui"
readme = "README.md"
keywords = ["nicegui", "gui", "tools", "niceguitools"]
license = { text = "GPL-3" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nicegui",
    "pydantic",
]
version = "0.1.0"
requires-python = ">=3.8"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]